--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Francisco & Grisel</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <!-- <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description"> -->
+    <meta content="" name="description"> -->
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
