--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <header class="parallax-header" style="position: relative; overflow: hidden; height: 100vh;">
     <video class="parallax-video" autoplay muted loop playsinline style="width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; z-index:1;">
-        <source src="videos/frank_griss.mp4" type="video/mp4" />
+        <source src="videos/frank_griss2.mp4" type="video/mp4" />
         Tu navegador no soporta videos HTML5.
     </video>
     <div class="overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.4);z-index:2;"></div>
