se agregan fotos en galeria

--- a/index.html
+++ b/index.html
@@ -326,41 +326,126 @@
         </div>
         <div class="owl-carousel gallery-carousel">
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-1.jpg" alt="">
-                <a href="img/gallery-1.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria1.jpg" alt="">
+                <a href="img/galeria1.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="">
-                <a href="img/gallery-2.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria2.jpg" alt="">
+                <a href="img/galeria2.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-3.jpg" alt="">
-                <a href="img/gallery-3.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria3.jpg" alt="">
+                <a href="img/galeria3.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-4.jpg" alt="">
-                <a href="img/gallery-4.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria4.jpg" alt="">
+                <a href="img/galeria4.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-5.jpg" alt="">
-                <a href="img/gallery-5.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria5.jpg" alt="">
+                <a href="img/galeria5.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="">
-                <a href="img/gallery-6.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/galeria6.jpg" alt="">
+                <a href="img/galeria6.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria7.jpg" alt="">
+                <a href="img/galeria7.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria8.jpg" alt="">
+                <a href="img/galeria8.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria9.jpg" alt="">
+                <a href="img/galeria9.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+             <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria10.jpg" alt="">
+                <a href="img/galeria10.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria11.jpg" alt="">
+                <a href="img/galeria11.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria12.jpg" alt="">
+                <a href="img/galeria12.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria13.jpg" alt="">
+                <a href="img/galeria13.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria14.jpg" alt="">
+                <a href="img/galeria14.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria15.jpg" alt="">
+                <a href="img/galeria15.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria16.jpg" alt="">
+                <a href="img/galeria16.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria17.jpg" alt="">
+                <a href="img/galeria17.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria18.jpg" alt="">
+                <a href="img/galeria18.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria19.jpg" alt="">
+                <a href="img/galeria19.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+              <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/galeria20.jpg" alt="">
+                <a href="img/galeria20.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            
         </div>
     </div>
     <!-- Gallery End -->
