--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>Francisco & Grissel</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <!-- <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description"> -->
+
 
     <!-- Favicon -->
     <link href="img/logo FyG.svg" rel="icon">
@@ -29,6 +28,11 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
+
+     <div id="site-loader">
+        <img src="img/logo FyG.svg" alt="Logo" id="loader-logo">
+    </div>
+
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand d-block d-lg-none">
@@ -563,7 +567,7 @@
 
     <!-- dress code start -->
 
-       <div class="container-fluid py-5" id="event">
+       <div class="container-fluid py-5" id="dresscode">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Dress Code</h6>
@@ -752,18 +756,20 @@
                     <div class="w-100 d-flex flex-column align-items-center">
                         <h4 class="mb-3">Lluvia de Sobres</h4>
                         <div class="bg-secondary rounded p-4 d-inline-block text-left flex-grow-1" style="min-width:260px;">
-                            <p class="mb-2">
+                            <p class="mb-2" style="text-align: justify;">
                                 Disponible en la recepcion. ¡Tu presencia y cariño son nuestro mejor regalo!                              
-                               
                             </p>
-                             <img src="img/sobre2-1.png" style="width: 100%; height: auto;" alt="sobre">
+                            <!-- <img src="img/sobre2-1.png" style="width: 100%; height: auto;" alt="sobre"> -->
+                            <div class="text-center mt-6">
+                                <i class="fas fa-envelope" style="font-size: 6rem; width: 80%; height: auto; display: block; margin: 0 auto;"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex">
                     <div class="w-100 d-flex flex-column align-items-center">
                         <h4 class="mb-3">Mesa de Regalos Online</h4>
-                        <p class="mt-2 text-primary">Haz clic en la imagen para ver nuestra mesa de regalos.</p>
+                        <p class="mt-2 text-primary" style="text-align: justify;">Haz clic en la imagen para ver nuestra mesa de regalos.</p>
                         <a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51752615" target="_blank" rel="noopener">
                             <img src="img/mes de regalos.jpg" alt="Mesa de Regalos" style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1);">
                         </a>
@@ -774,20 +780,22 @@
                     <div class="w-100 d-flex flex-column align-items-center">
                         <h4 class="mb-3">Datos Bancarios</h4>
                         <div class="bg-secondary rounded p-4 d-inline-block text-left flex-grow-1" style="min-width:260px;">
-                            <p class="mb-2"><strong>Banco:</strong> Mercado Pago</p>
-                            <p class="mb-2"><strong>Nombre:</strong> Grissel Guadalupe Guerra koh</p>
+                            <p class="mb-2" style="text-align: justify;"><strong>Banco:</strong> Mercado Pago</p>
+                            <p class="mb-2" style="text-align: justify;"><strong>Nombre:</strong> Grissel Guadalupe Guerra koh</p>
                             <!-- <p class="mb-2"><strong>Cuenta:</strong> 1234567890</p> -->
-                            <p class="mb-2"><strong>CLABE:</strong> 7229-69069-84478-7211</p>
+                            <p class="mb-2" style="text-align: justify;"><strong>CLABE:</strong> 7229-69069-84478-7211</p>
                             <!-- <p class="mb-0"><strong>Concepto:</strong> Lluvia de sobres</p> -->
                         </div>
+
+                        
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center mt-4" style="padding-top: 5%;">
+            <!-- <div class="row justify-content-center mt-4" style="padding-top: 5%;">
                 <div class="col-lg-8 text-center">
                     <p class="text-muted">¡Gracias por tu generosidad y por acompañarnos en este día tan especial!</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Mesa de Regalos End -->
@@ -846,6 +854,24 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script src="js/transiciones.js"></script>
+
+  
+<script>
+    // Evita scroll mientras carga
+    document.body.classList.add('loading');
+    window.addEventListener('load', function() {
+        var loader = document.getElementById('site-loader');
+        if(loader){
+            loader.style.opacity = '0';
+            setTimeout(function(){
+                loader.style.display = 'none';
+                document.body.classList.remove('loading');
+            }, 500);
+        }
+    });
+</script>
+
+
 </body>
 
 </html>
