se agrega espacio en seccion evento y familia

--- a/index.html
+++ b/index.html
@@ -455,64 +455,66 @@
     <!-- Gallery End -->
 
       <!-- Friends & Family Start -->
-    <div class="container-fluid py-5" id="family">
-        <div class="container pt-5 pb-3">
-            <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Familia</h6>
-                <h1 class="font-secondary display-4"> Del Novio & De la Novia</h1>
-                <i class="far fa-heart text-dark"></i>
-            </div>
-            <!-- <div class="row">
-                <div class="col-12 text-center mb-2">
-                    <ul class="list-inline mb-4" id="portfolio-flters">
-                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".first">Novio</li>
-                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".second">Novia</li>
-                    </ul>
+    <div style="margin-bottom: 5%;">
+        <div class="container-fluid py-5" id="family">
+            <div class="container pt-5 pb-3">
+                <div class="section-title position-relative text-center">
+                    <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Familia</h6>
+                    <h1 class="font-secondary display-4"> Del Novio & De la Novia</h1>
+                    <i class="far fa-heart text-dark"></i>
                 </div>
-            </div> -->
-            <div class="row portfolio-container">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/padres-frankie.jpg" alt="">
-                        <div class="bg-secondary text-center p-4">
-                            <h6 class="mb-3 text-white">Francisco Pérez & Aida Aguileta</h6>
-                            <p class="text-uppercase">Padres del novio</p>
-                            <!-- <div class="d-inline-block">
-                                <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                <!-- <div class="row">
+                    <div class="col-12 text-center mb-2">
+                        <ul class="list-inline mb-4" id="portfolio-flters">
+                            <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".first">Novio</li>
+                            <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".second">Novia</li>
+                        </ul>
+                    </div>
+                </div> -->
+                <div class="row portfolio-container">
+                    <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                        <div class="position-relative mb-2">
+                            <img class="img-fluid w-100" src="img/padres-frankie.jpg" alt="">
+                            <div class="bg-secondary text-center p-4">
+                                <h6 class="mb-3 text-white">Francisco Pérez & Aida Aguileta</h6>
+                                <p class="text-uppercase">Padres del novio</p>
+                                <!-- <div class="d-inline-block">
+                                    <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-instagram"></i></a>
+                                </div> -->
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/mama-griss.jpg" alt="">
-                        <div class="bg-secondary text-center p-4">
-                            <h6 class="mb-3 text-white">Carolina Koh</h6>
-                            <p class="text-uppercase">Madre de la novia</p>
-                            <!-- <div class="d-inline-block">
-                                <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                    <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                        <div class="position-relative mb-2">
+                            <img class="img-fluid w-100" src="img/mama-griss.jpg" alt="">
+                            <div class="bg-secondary text-center p-4">
+                                <h6 class="mb-3 text-white">Carolina Koh</h6>
+                                <p class="text-uppercase">Madre de la novia</p>
+                                <!-- <div class="d-inline-block">
+                                    <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-instagram"></i></a>
+                                </div> -->
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/padrinos-novios.jpg" alt="">
-                        <div class="bg-secondary text-center p-4">
-                            <h6 class="mb-3 text-white">Arturo Muñoz & Juanita Moguel</h6>
-                            <p class="text-uppercase">Padrinos</p>
-                            <!-- <div class="d-inline-block">
-                                <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                    <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                        <div class="position-relative mb-2">
+                            <img class="img-fluid w-100" src="img/padrinos-novios.jpg" alt="">
+                            <div class="bg-secondary text-center p-4">
+                                <h6 class="mb-3 text-white">Arturo Muñoz & Juanita Moguel</h6>
+                                <p class="text-uppercase">Padrinos</p>
+                                <!-- <div class="d-inline-block">
+                                    <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="mx-2" href="#"><i class="fab fa-instagram"></i></a>
+                                </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
