cambios del documento

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <div class="container-fluid py-5" id="story">
         <div class="container pt-5 pb-3">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Historia</h6>
+                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Historia</h6> -->
                 <h1 class="font-secondary display-4">Nuestra Historia de Amor</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
@@ -444,12 +444,12 @@
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
-              <div class="gallery-item">
+              <!-- <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/galeria20.jpg" alt="">
                 <a href="img/galeria20.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
-            </div>
+            </div> -->
             
         </div>
     </div>
@@ -529,7 +529,7 @@
     <div class="container-fluid py-5" id="event">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6>
+                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6> -->
                 <h1 class="font-secondary display-4">Nuestro evento de bodas</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
@@ -573,7 +573,7 @@
        <div class="container-fluid py-5" id="dresscode">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Dress Code</h6>
+                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Dress Code</h6> -->
                 <h1 class="font-secondary display-4">Código de vestimenta</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
