se agrega metadatas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta charset="utf-8">
     <title>Francisco & Grissel</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <!-- Título que aparecerá en la vista previa -->
+    <meta property="og:title" content="Francisco & Grissel" />
+
+    <!-- Descripción breve -->
+    <meta property="og:description" content="Nuestra Boda" />
+
+    <!-- URL de la imagen (idealmente cuadrada, mínimo 300x300 px) -->
+    <meta property="og:image" content="https://angelcr87.github.io/Frankie-Griss/img/logoFyG.png" />
+
+    <!-- URL canónica de la página -->
+    <meta property="og:url" content="https://angelcr87.github.io/Frankie-Griss/" />
+
+    <!-- Tipo de contenido -->
+    <meta property="og:type" content="website" />
+
 
 
     <!-- Favicon -->
