se agrega fecha

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
              <p class="text-yellow" style="font-family:Regencie;">FRANCISCO & GRISSEL</p>
              
             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                <h3 class="text-uppercase font-weight-normal text-yellow m-0" style="letter-spacing: 2px; font-family: Regencie;">CAMINO AL ALTAR</h3>
+                <h3 class="text-uppercase font-weight-normal text-yellow m-0" style="letter-spacing: 2px; font-family: Regencie;">15-Nov-2025</h3>
             </div>
             <br><br>
             <div class="countdown-container text-center py-4">
@@ -324,7 +324,7 @@
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2 text-yellow">Compromiso</h4>
                             <p class="text-uppercase mb-2">31 Agosto 2025</p>
-                            <p class="m-0">Aunque nuestro compromiso comenzó simbólicamente hace tiempo, el 31 de agosto se convirtió en un momento único. Ese día, rodeados de nuestras familias y seres queridos, sellamos nuestro amor de celebrando todo lo que hemos construido juntos y lo que está por venir.</p>
+                            <p class="m-0">Aunque nuestro compromiso comenzó simbólicamente hace tiempo, el 31 de agosto se convirtió en un momento único. Ese día, rodeados de nuestras familias y seres queridos, sellamos nuestro amor celebrando todo lo que hemos construido juntos y lo que está por venir.</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left animate__animated animate__fadeInRight fade-in-right">
@@ -550,7 +550,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
-                    <h5 class="font-weight-normal text-muted mb-3 pb-3">Encontrarnos fue lo mejor que no ha pasado. Permanecer juntos es la decisión más maravillosa que a Dios queremos confiar.</h5>
+                    <h5 class="font-weight-normal text-muted mb-3 pb-3">Encontrarnos fue lo mejor que nos ha pasado. Permanecer juntos es la decisión más maravillosa que a Dios queremos confiar.</h5>
                 </div>
             </div>
             <div class="row">
